Closed Bug 1210180 Opened 9 years ago Closed 9 years ago

VibrancyManager NSView recycling doesn't update correctly when BackingScaleFactor changes

Categories

(Core :: Widget: Cocoa, defect)

42 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox44 --- fixed

People

(Reporter: BenWa, Assigned: BenWa)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

One of the sub problems of bug 1205372 is that the OSX Vibrancy effect doesn't update until you resize the window if you drag it from a 1x monitor to a 2x monitor.

I tracked it down to the logic for recycling the views but I'm not sure why it doesn't work because we compute the same rect regardless if we create or recycle a view.
Assignee: nobody → bgirard
Bug 1210180 - Force the view to update when we recycle a Vibrancy view. r=mstange
Attachment #8668136 - Flags: review?(mstange)
Comment on attachment 8668136 [details]
MozReview Request: Bug 1210180 - Force the view to update when we recycle a Vibrancy view. r=mstange

https://reviewboard.mozilla.org/r/20893/#review19109

I like this patch much better!

Interestically, I can't reproduce this bug on 10.11. And theoretically, frame changes should always cause an NSView to be marked as needing display - in other places we've added workarounds to suppress needsDisplays for frame changes that don't need to invalidate. So maybe Apple have fixed a bug here.

::: widget/cocoa/VibrancyManager.mm:38
(Diff revision 1)
> +        view.needsDisplay = YES;

Let's make this \[view setNeedsDisplay:YES\] to be consistent with setFrame. And let's call setFrame first and setNeedsDisplay afterwards (assuming that still works), I think that would make more sense to the reader.

At some point I should go through widget/cocoa and make us convert more stuff to property syntax instead of setter syntax, but let's not start an inconsistent mix now.
Attachment #8668136 - Flags: review?(mstange) → review+
Comment on attachment 8668136 [details]
MozReview Request: Bug 1210180 - Force the view to update when we recycle a Vibrancy view. r=mstange

Bug 1210180 - Force the view to update when we recycle a Vibrancy view. r=mstange
https://hg.mozilla.org/integration/mozilla-inbound/rev/21a11ea9774895d651943e27e94e487ad027a089
Bug 1210180 - Force the view to update when we recycle a Vibrancy view. r=mstange
https://hg.mozilla.org/mozilla-central/rev/21a11ea97748
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: