Bug 1210180 - Force the view to update when we recycle a Vibrancy view. r=mstange